fix(quill): Collaspe whitespace in tables

--- a/frappe/public/scss/common/quill.scss
+++ b/frappe/public/scss/common/quill.scss
@@ -294,6 +294,7 @@
 
 .ql-editor td {
 	border: 1px solid var(--dark-border-color);
+	white-space-collapse: initial;
 }
 
 .ql-editor blockquote {
